[project]
name = "cysox"
version = "0.1.0"
description = "A cython wrapper of sox"
readme = "README.md"
authors = [
    { name = "Shakeeb Alireza", email = "sa@example.com" }
]
requires-python = ">=3.9"
dependencies = [
    "cython",
]

[project.scripts]
cysox = "cysox:__main__"

[build-system]
requires = ["setuptools>=61", "cython"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]

[tool.setuptools]
include-package-data = false

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
# addopts = "--cov=cysox --cov-report html"
# addopts = "-ra -q"
