[project]
name = "cysox"
version = "0.1.1"
description = "A cython wrapper of sox"
readme = "README.md"
authors = [
    { name = "Shakeeb Alireza", email = "sa@example.com" }
]
requires-python = ">=3.9"
dependencies = [
    "cython",
]

[project.scripts]
cysox = "cysox:__main__"

[build-system]
requires = ["setuptools>=61", "cython"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-benchmark",
    "memory-profiler",
]
docs = [
    "sphinx>=7.0",
    "furo",
    "myst-parser",
]

[tool.setuptools]
include-package-data = false

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
# addopts = "--cov=cysox --cov-report html"
# addopts = "-ra -q"

[tool.cibuildwheel]
# Skip PyPy, Windows, and musllinux (Alpine uses apk, sox packaging is problematic)
skip = "pp* *-win* *-musllinux_*"

# Python versions to build
build = "cp39-* cp310-* cp311-* cp312-* cp313-* cp314-*"

# Test the wheel with a simple import
test-requires = "pytest"
test-command = "python -c \"import cysox; cysox.init(); print(f'cysox {cysox.version()}'); cysox.quit()\""

[tool.cibuildwheel.linux]
archs = ["x86_64", "aarch64"]

# Install dependencies in manylinux container
before-all = [
    "yum install -y epel-release || true",
    "yum install -y sox sox-devel libsndfile-devel flac-devel libvorbis-devel opus-devel libpng-devel pkgconfig || (apt-get update && apt-get install -y libsox-dev libsndfile1-dev libflac-dev libvorbis-dev libopus-dev libpng-dev pkg-config)",
]

[tool.cibuildwheel.macos]
# Build for native architecture only (arm64 on macos-14, x86_64 on macos-13)
# Cross-compilation requires matching architecture libraries
archs = ["native"]

# macOS dependencies installed via Homebrew in workflow before cibuildwheel runs
before-build = "pip install cython setuptools"

# Use static linking to bundle libsox into the wheel
environment = { STATIC = "1" }
