[project]
name = "cysox"
version = "0.1.3"
description = "A Pythonic audio processing library wrapping libsox"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Shakeeb Alireza", email = "me@example.com" }
]
maintainers = [
    { name = "Shakeeb Alireza", email = "me@example.com" }
]
requires-python = ">=3.9"
keywords = [
    "audio",
    "sound",
    "sox",
    "libsox",
    "audio-processing",
    "effects",
    "cython",
    "dsp",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Cython",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Sound/Audio :: Analysis",
    "Topic :: Multimedia :: Sound/Audio :: Conversion",
    "Topic :: Multimedia :: Sound/Audio :: Editors",
    "Topic :: Multimedia :: Sound/Audio :: Sound Synthesis",
    "Typing :: Typed",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/shakfu/cysox"
Repository = "https://github.com/shakfu/cysox"
Documentation = "https://github.com/shakfu/cysox#readme"
Issues = "https://github.com/shakfu/cysox/issues"
Changelog = "https://github.com/shakfu/cysox/releases"

[project.scripts]
cysox = "cysox:__main__"

[build-system]
requires = ["setuptools>=61", "cython"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-benchmark",
    "memory-profiler",
    "sphinx>=7.4.7",
    "twine>=6.2.0",
]

[tool.setuptools]
include-package-data = false

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
# Disable benchmark output by default (runs tests but skips timing)
# Run benchmarks explicitly with: pytest --benchmark-enable
# Or run only benchmarks with: pytest --benchmark-only
addopts = "--benchmark-disable"

[tool.cibuildwheel]
# Skip PyPy, Windows, and musllinux (Alpine uses apk, sox packaging is problematic)
skip = "pp* *-win* *-musllinux_*"

# Python versions to build
build = "cp39-* cp310-* cp311-* cp312-* cp313-* cp314-*"

# Test the wheel with a simple import
test-requires = "pytest"
test-command = "python -c \"import cysox; from cysox import sox; sox.init(); print(f'cysox {cysox.__version__}, libsox {sox.version()}'); sox.quit()\""

[tool.cibuildwheel.linux]
archs = ["x86_64", "aarch64"]

# Install dependencies in manylinux container
before-all = [
    "yum install -y epel-release || true",
    "yum install -y sox sox-devel libsndfile-devel flac-devel libvorbis-devel opus-devel libpng-devel pkgconfig || (apt-get update && apt-get install -y libsox-dev libsndfile1-dev libflac-dev libvorbis-dev libopus-dev libpng-dev pkg-config)",
]

[tool.cibuildwheel.macos]
# Build for native architecture only (arm64 on macos-14, x86_64 on macos-13)
# Cross-compilation requires matching architecture libraries
archs = ["native"]

# macOS dependencies installed via Homebrew in workflow before cibuildwheel runs
before-build = "pip install cython setuptools"

# Use static linking to bundle libsox into the wheel
environment = { STATIC = "1" }
